@@ -18,4 +18,67 @@
 	<name>commons-web</name>
 	<description>Motu Commons Web.</description>
 
+	<!-- build -->
+	<build>
+		<!-- plugins -->
+		<plugins>
+			<!-- maven-surefire -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- skip mockito WARNING -->
+					<!-- WARNING: A Java agent has been loaded dynamically -->
+					<!-- WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading 
+						to hide this warning -->
+					<!-- WARNING: If a serviceability tool is not in use, please run with 
+						-Djdk.instrument.traceUsage for more information -->
+					<!-- WARNING: Dynamic loading of agents will be disallowed by default 
+						in a future release -->
+					<!-- Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported 
+						for boot loader classes because bootstrap classpath has been appended -->
+					<!-- https://github.com/mockito/mockito/issues/3037 -->
+					<!-- https://openjdk.org/jeps/451 -->
+					<!-- https://stackoverflow.com/questions/65613084/java-hotspottm-64-bit-server-vm-warning-sharing-is-only-supported-for-boot-lo -->
+					<!-- https://stackoverflow.com/questions/12392926/maven-surefire-arguments-when-running-junit-test-via-eclipse -->
+					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<!-- dependencies -->
+	<dependencies>
+		<!-- servlet -->
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- junit -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
 </project>
